--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CalculadorAv</title>
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/principal.css">
 </head>
 <body>
     <header>
@@ -16,7 +18,7 @@
             <li><a href="densidade.html">Densidade</a></li>
             <li>Moedas</li>
             <li>Pérolas</li>
-            <li>Links Importantes</li>
+            <li><a href="linksUteis.html">Links Uteis</a></li>
          </ul>
     </nav>
     </main>
